--- a/static/css/main.css
+++ b/static/css/main.css
@@ -63,6 +63,7 @@ select {
 
 /* search input field */
 .container-pseudo {
+  display: flex;
   position: relative;
   min-width: 30vw;
 }
@@ -84,7 +85,7 @@ input[type=search] {
   box-sizing: border-box;
   background: #f5f5f5;
   border: solid 1px #ccc;
-  padding: 4px 10px 4px 32px;
+  padding: 7px 10px 7px 32px;
   -webkit-border-radius: 10em;
   -moz-border-radius: 10em;
   border-radius: 5px;
@@ -110,16 +111,13 @@ input::-webkit-input-placeholder {
 }
 
 @media only screen and (max-width: 480px) {
-  input[type=search] {min-width: 20vw;}
-  input[type=search]:focus {min-width: 30vw;}
+  input[type=search] {min-width: 30vw;}
 }
 @media only screen and (min-width: 480px) {
   input[type=search] {min-width: 40vw;}
-  input[type=search]:focus {min-width: 50vw;}
 }
 @media only screen and (min-width: 600px) {
   input[type=search] {min-width: 40vw;}
-  input[type=search]:focus {min-width: 50vw;}
 }
 @media only screen and (min-width: 900px) {
   input[type=search] {min-width: 30vw;}
