schema.org structure - no idea is it work or not

--- a/static/views/index.ejs
+++ b/static/views/index.ejs
@@ -47,10 +47,11 @@
 
       gtag('config', 'UA-114689083-3');
     </script>
+    <%- include('./partials/json-ld', marker); -%>
   </head>
   
   <body>
-
+ 
   <%- include('./partials/header', studio); -%>
 
 
