--- a/static/views/partials/json-ld.ejs
+++ b/static/views/partials/json-ld.ejs
@@ -1,54 +1,12 @@
 <% if (marker) { -%>
 <script type="application/ld+json">
 {
-  "@context": "http://schema.org",
-  "@type": "DanceEvent",
-  "name": "Школа танцев <%= marker.properties.name %>",
-  "description": "Занятия по: <%= marker.properties.speciality.join(', ') %>",
-  "eventSchedule": [
-    {
-      "@type": "Schedule",
-      "repeatFrequency": "P1M",
-      "byDay": [
-        "http://schema.org/Monday",
-        "http://schema.org/Tuesday",
-        "http://schema.org/Wednesday",
-        "http://schema.org/Thursday",
-        "http://schema.org/Friday"
-      ],
-      "startTime": "18:00",
-      "endTime": "22:00"
-    }
-  ],
-  "location": {
-    "@type": "Place",
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "<%= marker.properties.address %>",
-      "addressLocality": "<%= marker.properties.city %>",
-      "addressCountry": "Россия"
-    },
-    "geo": {
-      "@type": "GeoCoordinates",
-      "latitude": "<%= marker.geometry.coordinates[1] %>",
-      "longitude": "<%= marker.geometry.coordinates[0] %>"
-    }
-  },
-  "additionalType": "https://schema.org/LeisureTimeActivity"
-},
-{
-  "@context": "http://schema.org",
-  "@type": "PhysicalActivity",
-  "category": {
-    "@type":"PhysicalActivityCategory",
-    "supersededBy": ["https://schema.org/LeisureTimeActivity"]
-  }
-},
-{
   "@context": "http://www.schema.org",
   "@type": "SportsActivityLocation",
+  "additionalType": ["https://schema.org/LeisureTimeActivity","https://schema.org/Balance","https://schema.org/Flexibility"],
   "name": "<%= marker.properties.name %>",
   "url": "<%= marker.properties.vk %>",
+  "image" : "https://dancemap.online/images/image-placeholder.svg",
   "priceRange": "$",
   "description": "Школа танцев: <%= marker.properties.speciality.join(', ') %>",
   "address": {
@@ -62,7 +20,37 @@
      "latitude": "<%= marker.geometry.coordinates[1] %>",
      "longitude": "<%= marker.geometry.coordinates[0] %>"
   },
-   "openingHours": "Mo 19:00-23:00 Tu 19:00-23:00 We 19:00-23:00 Th 19:00-23:00 Fr 19:00-23:00"
+   "openingHours": "Mo 19:00-23:00 Tu 19:00-23:00 We 19:00-23:00 Th 19:00-23:00 Fr 19:00-23:00",
+   "event": {
+      "@type": "DanceEvent",
+      "name": "Школа танцев <%= marker.properties.name %>",
+      "description": "Занятия по: <%= marker.properties.speciality.join(', ') %>",
+      "startDate": "2020-05-31T21:00:00.000Z",
+      "eventAttendanceMode": "https://schema.org/OfflineEventAttendanceMode",
+      "eventStatus": "https://schema.org/EventScheduled",
+      "eventSchedule": [{
+        "@type": "Schedule",
+        "repeatFrequency": "P1M",
+        "byDay": [
+          "http://schema.org/Monday",
+          "http://schema.org/Tuesday",
+          "http://schema.org/Wednesday",
+          "http://schema.org/Thursday",
+          "http://schema.org/Friday"
+        ],
+        "startTime": "18:00",
+        "endTime": "22:00"
+      }],
+      "location": {
+        "@type": "Place",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "<%= marker.properties.address %>",
+          "addressLocality": "<%= marker.properties.city %>",
+          "addressCountry": "Россия"
+        }
+      }
+    }
 }
 
 </script>
