--- a/static/views/partials/schema_collection.ejs
+++ b/static/views/partials/schema_collection.ejs
@@ -1,30 +1,5 @@
-<script type='application/ld+json'>
-{
-  "@context": "http://www.schema.org",
-  "@type": "SportsActivityLocation",
-  "name": "<%= marker.properties.name %>",
-  "url": "<%= marker.properties.vk %>",
-  <% if (marker.properties.seoimage) { -%>
-  "logo": "<%= "data:image/png;base64," + Buffer.from(marker.properties.seoimage.data).toString('base64') %>",
-  <% } -%>
-  "priceRange": "$",
-  "description": "Школа танцев: <%= marker.properties.speciality.join(', ') %>",
-  "address": {
-     "@type": "PostalAddress",
-     "streetAddress": "<%= marker.properties.address %>",
-     "addressLocality": "<%= marker.properties.city %>",
-     "addressCountry": "Россия"
-  },
-  "geo": {
-     "@type": "GeoCoordinates",
-     "latitude": "<%= marker.geometry.coordinates[1] %>",
-     "longitude": "<%= marker.geometry.coordinates[0] %>"
-  },
-   "openingHours": "Mo 19:00-23:00 Tu 19:00-23:00 We 19:00-23:00 Th 19:00-23:00 Fr 19:00-23:00"
-}
-  </script>
-  
-  <script type="application/ld+json">
+<% if (marker) { -%>
+<script type="application/ld+json">
 {
   "@context": "http://schema.org",
   "@type": "DanceEvent",
@@ -68,6 +43,55 @@
     "@type":"PhysicalActivityCategory",
     "supersededBy": ["https://schema.org/LeisureTimeActivity"]
   }
+},
+{
+  "@context": "http://www.schema.org",
+  "@type": "SportsActivityLocation",
+  "name": "<%= marker.properties.name %>",
+  "url": "<%= marker.properties.vk %>",
+  "image" : "https://dancemap.online/images/image-placeholder.svg",
+  "priceRange": "$",
+  "description": "Школа танцев: <%= marker.properties.speciality.join(', ') %>",
+  "address": {
+     "@type": "PostalAddress",
+     "streetAddress": "<%= marker.properties.address %>",
+     "addressLocality": "<%= marker.properties.city %>",
+     "addressCountry": "Россия"
+  },
+  "geo": {
+     "@type": "GeoCoordinates",
+     "latitude": "<%= marker.geometry.coordinates[1] %>",
+     "longitude": "<%= marker.geometry.coordinates[0] %>"
+  },
+   "openingHours": "Mo 19:00-23:00 Tu 19:00-23:00 We 19:00-23:00 Th 19:00-23:00 Fr 19:00-23:00"
 }
 
 </script>
+
+<% } -%>
+
+
+{
+  "@context": "http://www.schema.org",
+  "@type": "SportsActivityLocation",
+  "name": "<%= marker.properties.name %>",
+  "url": "<%= marker.properties.vk %>",
+  "image" : "https://dancemap.online/images/image-placeholder.svg",
+  "priceRange": "$",
+  "description": "Школа танцев: <%= marker.properties.speciality.join(', ') %>",
+  "address": {
+     "@type": "PostalAddress",
+     "streetAddress": "<%= marker.properties.address %>",
+     "addressLocality": "<%= marker.properties.city %>",
+     "addressCountry": "Россия"
+  },
+  "geo": {
+     "@type": "GeoCoordinates",
+     "latitude": "<%= marker.geometry.coordinates[1] %>",
+     "longitude": "<%= marker.geometry.coordinates[0] %>"
+  },
+   "openingHours": "Mo 19:00-23:00 Tu 19:00-23:00 We 19:00-23:00 Th 19:00-23:00 Fr 19:00-23:00",
+   "event: {
+
+   }"
+}
