--- a/static/views/partials/seotitle.ejs
+++ b/static/views/partials/seotitle.ejs
@@ -1,7 +1,7 @@
 
-<% if (title) { %>
-  <title>Школа танцев <%= title %></title>
-  <meta name="Description" content="Школа танцев <%= title %>, направления: <%= classes %>"/>
+<% if (marker) { %>
+  <title>Школа танцев <%= marker.properties.name %>, <%= marker.properties.city %></title>
+  <meta name="Description" content="Школа танцев <%= title %>, обучение танцам: <%= classes %>"/>
 <% } else { %>
   <title>Студии и школы танцев, танцевальные события и вечеринки на онлайн карте Dancemap.online</title>
   <meta name="Description" content="Студии и школы танцев, танцевальные события и вечеринки на онлайн карте Dancemap.online"/>
