meta favicon, noindex

--- a/static/views/index.ejs
+++ b/static/views/index.ejs
@@ -3,6 +3,7 @@
   <head>
     
     <%- include('./partials/seotitle', title); -%>
+    <link rel="icon" href="https://dancemap.online/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="yandex-verification" content="e73d49b4298f11ea" />
