--- a/static/css/maintest.css
+++ b/static/css/maintest.css
@@ -27,7 +27,7 @@ header .container-select__pseudo {
   padding: 10px
 }
 
-select {
+header select {
     cursor:pointer;
     display:inline-block;
     position:relative;
@@ -67,7 +67,7 @@ select {
 }
 
 .nav .burger-menu {
-  margin: 17px 7px 17px 17px;
+  margin: 17px 7px 17px 15px;
 }
 
 /* search input field */
@@ -155,30 +155,28 @@ input::-webkit-input-placeholder {
 }
 
 @media only screen and (max-width: 480px) {
-  input[type=search] {min-width: 65vw;}
-
+  input[type=search] {min-width: 70vw;}
   #class-selector {
   -webkit-appearance: none; 
   background: url(../images/filter-solid.svg) no-repeat right;
-  width:22px;
+  width:20px;
+  background-color: white;
+  
+  line-height: 1.3em;
 }
-
-  header .container-select__pseudo {
-    padding: 7px
-  }
-
+  header .container-select__pseudo {padding: 7px}
 }
 @media only screen and (min-width: 480px) {
-  input[type=search] {min-width: 55vw;}
+  input[type=search] {min-width: 65vw;}
 }
 @media only screen and (min-width: 600px) {
-  input[type=search] {min-width: 45vw;}
+  input[type=search] {min-width: 55vw;}
 }
 @media only screen and (max-width: 700px) {
   #container-logo{display: none;}
 }
 @media only screen and (min-width: 900px) {
-  input[type=search] {min-width: 30vw; }
+  input[type=search] {min-width: 45vw; }
 }
 
 /*SIDE NAV*/
@@ -186,14 +184,14 @@ input::-webkit-input-placeholder {
   height: 100%;
   width: 0;
   position: fixed;
-  z-index: 9999;
+  z-index: 10000;
   top: 4px;
   left: 0;
   background-color: #FFF;
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
-  opacity: 0.85;
+  opacity: 1;
   box-shadow: 0 2px 5px -1px rgba(0, 0, 0, 0.5);
 }
 
@@ -227,7 +225,7 @@ input::-webkit-input-placeholder {
 }
 
 .burger-menu {
-  font-size: 24px;
+  font-size: 25px;
   cursor: pointer;
   color: #D91A3D;
   padding: 0;
@@ -255,18 +253,77 @@ input::-webkit-input-placeholder {
   margin:0px 5px 0px 0px;
 }
 
-.container-filters div select {
-  font:normal 14px/24px 'Roboto', Helvetica, Arial,Tahoma,sans-serif;
+.container-filters .filter-dance {
+  padding: 0px 5px;
+  background-color: white;
+  border-radius: 5px;
+}
 
+.container-filters .filter-dance select {
+  cursor:pointer;
+  display:inline-block;
+  position:relative;
+  font:normal 16px/24px 'Roboto', Helvetica, Arial,Tahoma,sans-serif;
+  color:black;
+  padding: 4px 10px 4px 10px;
+  border: none;
+  box-sizing: border-box;
 }
 
 
+.container-filters .filter-types select{
+    cursor:pointer;
+    display:inline-block;
+    position:relative;
+    font:normal 16px/24px 'Roboto', Helvetica, Arial,Tahoma,sans-serif;
+    color:black;
+    border:1px solid #ccc;
+    border-radius: 5px;
+    padding: 4px 10px 4px 10px;
+}
+
+.container-filters input[type=date] {
+  background:#fff url(/images/calendar-regular.svg)  95% 50% no-repeat;
+  background-size: 19px;
+  border: 1px solid #c4c4c4;
+  border-radius: 5px;
+  background-color: #fff;
+  padding: 1px 5px;
+  box-shadow: inset 0 3px 6px rgba(0,0,0,0.1);
+  font:normal 16px/24px 'Roboto', Helvetica, Arial,Tahoma,sans-serif;
+  cursor: pointer;
+
+}
+
+[type="date"]::-webkit-inner-spin-button {
+  display: none;
+}
+
+[type="date"]::-webkit-calendar-picker-indicator {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: auto;
+  height: auto;
+  color: transparent;
+  background: transparent;
+}
+[type="date"]::-webkit-clear-button { 
+  display: none;
+}
+/* change color of symbol on hover */
+[type="date"]:hover:after {
+    color: #bf1400;
+}
+
 @media screen and (max-width: 480px) {
-  .container-filters {padding: 5px 13px;}
+  .container-filters {padding: 5px 11px;}
+  .container-filters .filter-types select{width:150px;}
   .container-filters input[type=date] { 
-    font:normal 13px/24px 'Roboto', Helvetica, Arial,Tahoma,sans-serif;
-    width: 100px;}
-  .container-filters div select {width:110px;}    
+    width: 110px;}   
 }
 
 .search-prompt {
