--- a/static/css/maintest.css
+++ b/static/css/maintest.css
@@ -254,9 +254,7 @@ input::-webkit-input-placeholder {
 }
 
 .container-filters .filter-dance {
-  padding: 0px 5px;
-  background-color: white;
-  border-radius: 5px;
+
 }
 
 .container-filters .filter-dance select {
@@ -268,15 +266,14 @@ input::-webkit-input-placeholder {
   padding: 4px 10px 4px 10px;
   border: none;
   background-color: white;
+  border-radius: 5px;
 }
-
 
 .container-filters .filter-types select {
     cursor:pointer;
     display:inline-block;
     position:relative;
     font:normal 16px/24px 'Roboto', Helvetica, Arial,Tahoma,sans-serif;
-    color:black;
     border:1px solid #ccc;
     border-radius: 5px;
     padding: 4px 10px 4px 10px;
@@ -301,6 +298,7 @@ input::-webkit-input-placeholder {
 }
 
 [type="date"]::-webkit-calendar-picker-indicator {
+  display: none;
   opacity: 0;
   position: absolute;
   top: 0;
@@ -323,8 +321,13 @@ input::-webkit-input-placeholder {
 @media screen and (max-width: 480px) {
   .container-filters {padding: 5px 11px;}
   .container-filters .filter-types select{width:150px;}
-  .container-filters input[type=date] { 
-    width: 120px;}   
+  .container-filters input[type=date] {width: 120px;}  
+  .container-filters .filter-dance {
+    padding: 0px 5px;
+    background-color: white;
+    border-radius: 5px;
+  }
+
 }
 
 .search-prompt {
