--- a/static/views/partials/headertest.ejs
+++ b/static/views/partials/headertest.ejs
@@ -34,7 +34,7 @@
       </select>
     </div>
     <div class="filter-date">
-      <input type="date" id="datepicker" name="" value="2013-01-08">
+      <input type="date" id="datepicker" name="" value="2013-01-08" required="required">
     </div>
   </div>
   
