--- a/static/views/partials/headertest.ejs
+++ b/static/views/partials/headertest.ejs
@@ -30,12 +30,17 @@
     </div>
     <div class="filter-types">
       <select>
+        <option value="0">Опены/Вечеринки</option>
         <option value="0">Мастерклассы</option>
+        <option value="0">Турниры</option>
+        <option value="0">Онлайн уроки</option>
       </select>
     </div>
     <div class="filter-date">
       <input type="date" id="datepicker" name="" value="2013-01-08" required="required">
     </div>
+    <div class="filter-date__nav">
+      <button id='date-left'></button><button id='date-right'></button></div>
   </div>
   
   <noindex>
