--- a/static/css/maintest.css
+++ b/static/css/maintest.css
@@ -100,6 +100,7 @@ input[type=search]::-webkit-search-cancel-button {
   background-image: url(../images/close-solid.svg);
   background-size: 18px;*/
 }
+
 input[type=search] {
   box-sizing: border-box;
   background: #f5f5f5;
@@ -173,7 +174,7 @@ input::-webkit-input-placeholder {
 @media only screen and (min-width: 600px) {
   input[type=search] {min-width: 55vw;}
 }
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 600px) {
   #container-logo{display: none;}
 }
 @media only screen and (min-width: 900px) {
@@ -245,7 +246,7 @@ input::-webkit-input-placeholder {
 .container-filters {
   position: relative;
   z-index: 9999;
-  padding: 5px 55px;
+  padding: 5px 43px;
   overflow-x: hidden;
   display: inline-flex;
   align-items: center;
@@ -258,27 +259,15 @@ input::-webkit-input-placeholder {
 
 }
 
-.container-filters .filter-dance select {
+.container-filters select {
   cursor:pointer;
   display:inline-block;
   position:relative;
   font:normal 16px/24px 'Roboto', Helvetica, Arial,Tahoma,sans-serif;
-  color:black;
+  border:1px solid #ccc;
+  border-radius: 5px;  
   padding: 4px 10px 4px 10px;
-  border: none;
   background-color: white;
-  border-radius: 5px;
-}
-
-.container-filters .filter-types select {
-    cursor:pointer;
-    display:inline-block;
-    position:relative;
-    font:normal 16px/24px 'Roboto', Helvetica, Arial,Tahoma,sans-serif;
-    border:1px solid #ccc;
-    border-radius: 5px;
-    padding: 4px 10px 4px 10px;
-    background-color: white;
 }
 
 .container-filters input[type=date] {
@@ -287,7 +276,7 @@ input::-webkit-input-placeholder {
   border: 1px solid #c4c4c4;
   border-radius: 5px;
   background-color: #fff;
-  padding: 1px 5px;
+  padding: 1px 3px;
   box-shadow: inset 0 3px 6px rgba(0,0,0,0.1);
   font:normal 16px/24px 'Roboto', Helvetica, Arial,Tahoma,sans-serif;
   cursor: pointer;
@@ -296,8 +285,7 @@ input::-webkit-input-placeholder {
 
 [type="date"]::-webkit-inner-spin-button {
   display: none;
-  -webkit-appearance: none;
-  
+  -webkit-appearance: none;  
 }
 
 [type="date"]::-webkit-calendar-picker-indicator {
@@ -314,6 +302,7 @@ input::-webkit-input-placeholder {
   color: transparent;
   background: transparent;
 }
+
 [type="date"]::-webkit-clear-button { 
   display: none;
   -webkit-appearance: none;
@@ -322,17 +311,62 @@ input::-webkit-input-placeholder {
 [type="date"]:hover:after {
     color: #bf1400;
 }
+.filter-date__nav {
+  border: 1px solid #c4c4c4;
+  border-radius: 5px;
+  background-color: white;
+  display: flex;
+}
+
+#date-left, #date-right {
+  width: 24px;
+  height: 24px;
+  border: 0px;
+  cursor: pointer;
+  pointer-events: bounding-box;
+  border-color: #FFF;
+  opacity: 0.6;
+  transform: scale(1);
+  margin: 2px;
+}
+#date-left {
+  background: url(/images/chevron-left-solid.svg) center / contain no-repeat;
+}
+#date-right {
+  background: url(/images/chevron-right-solid.svg) center / contain no-repeat;
+}
+#date-left:hover { 
+  opacity: 1;
+}
+#date-right:hover { 
+  opacity: 1;
+}
+#date-left:active { 
+  transform: scale(1.1);
+}
+#date-right:active { 
+  transform: scale(1.1);
+}
+
+
 
 @media screen and (max-width: 480px) {
-  .container-filters {padding: 5px 11px;}
-  .container-filters .filter-types select{width:150px;}
+  
   .container-filters input[type=date] {width: 120px;}  
   .container-filters .filter-dance {
     padding: 0px 5px;
     background-color: white;
     border-radius: 5px;
+    border: 1px solid #ccc;
+  }
+  .container-filters .filter-dance select {
+    border: none;
   }
 
+}
+@media screen and (max-width: 600px) {
+  .container-filters .filter-types select{width:130px;}
+  .container-filters {padding: 5px 11px;}
 }
 
 .search-prompt {
