--- a/static/views/partials/headertest.ejs
+++ b/static/views/partials/headertest.ejs
@@ -37,10 +37,13 @@
       </select>
     </div>
     <div class="filter-date">
-      <input type="date" id="datepicker" name="" value="2013-01-08" required="required">
+      <div><button id='date-icon'></button></div>
+      <div><input type="date" id="datepicker" name="" value="2013-01-08" required="required"></div>
+      <span><button id='date-left'></button></span><span><button id='date-right'></button></span>
     </div>
     <div class="filter-date__nav">
-      <button id='date-left'></button><button id='date-right'></button></div>
+      
+    </div>
   </div>
   
   <noindex>
