--- a/static/css/maintest.css
+++ b/static/css/maintest.css
@@ -67,7 +67,7 @@ header select {
 }
 
 .nav .burger-menu {
-  margin: 17px 7px 17px 15px;
+  margin: 17px 7px 17px 14px;
 }
 
 /* search input field */
@@ -251,14 +251,20 @@ input::-webkit-input-placeholder {
   display: inline-flex;
   align-items: center;
 }
-.container-filters div {
+.container-filters > div {
   margin:0px 5px 0px 0px;
 }
 
 .container-filters .filter-dance {
 
 }
-
+.container-filters .filter-date {
+  border: 1px solid #c4c4c4;
+  border-radius: 5px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+}
 .container-filters select {
   cursor:pointer;
   display:inline-block;
@@ -271,16 +277,13 @@ input::-webkit-input-placeholder {
 }
 
 .container-filters input[type=date] {
-  background:#fff url(/images/calendar-regular.svg)  95% 50% no-repeat;
   background-size: 19px;
-  border: 1px solid #c4c4c4;
-  border-radius: 5px;
+  border: none;
   background-color: #fff;
-  padding: 1px 3px;
-  box-shadow: inset 0 3px 6px rgba(0,0,0,0.1);
+  padding: 1px 0px;
   font:normal 16px/24px 'Roboto', Helvetica, Arial,Tahoma,sans-serif;
   cursor: pointer;
-  width: 120px;
+  width: 90px;
 }
 
 [type="date"]::-webkit-inner-spin-button {
@@ -311,14 +314,8 @@ input::-webkit-input-placeholder {
 [type="date"]:hover:after {
     color: #bf1400;
 }
-.filter-date__nav {
-  border: 1px solid #c4c4c4;
-  border-radius: 5px;
-  background-color: white;
-  display: flex;
-}
 
-#date-left, #date-right {
+#date-left, #date-right, #date-icon {
   width: 24px;
   height: 24px;
   border: 0px;
@@ -347,12 +344,14 @@ input::-webkit-input-placeholder {
 #date-right:active { 
   transform: scale(1.1);
 }
-
+#date-icon {
+  background:#fff url(/images/calendar-regular.svg)  95% 50% no-repeat;
+}
 
 
 @media screen and (max-width: 480px) {
   
-  .container-filters input[type=date] {width: 120px;}  
+  .container-filters input[type=date] {width: 90px;}  
   .container-filters .filter-dance {
     padding: 0px 5px;
     background-color: white;
