--- a/static/views/partials/headertest.ejs
+++ b/static/views/partials/headertest.ejs
@@ -36,13 +36,21 @@
         <option value="0">Онлайн уроки</option>
       </select>
     </div>
-    <div class="filter-date">
-      <div><button id='date-icon'></button></div>
-      <div><input type="date" id="datepicker" name="" value="2013-01-08" required="required"></div>
-      <span id=""><button id='date-left'></button><button id='date-right'></button></span>
+    <div class="filter-date__nav">
+      <span >
+        <button id='date-left'></button>
+      </span>
+      <!--<span>
+        <button id='date-icon'></button>
+      </span>-->
+    </div>
+    <div class="filter-date">  
+      <input type="date" id="datepicker" name="" value="" required="required">
     </div>
     <div class="filter-date__nav">
-      
+      <span>
+        <button id='date-right'></button>
+      </span>
     </div>
   </div>
   
