--- a/static/views/indextestmenu.ejs
+++ b/static/views/indextestmenu.ejs
@@ -74,7 +74,7 @@
       this.dancemap.nav.navSetup(settings);
 
     </script>
-
+    <%- include('./partials/marker-modal-mobile', marker); -%>
     <%- include('./partials/footertest', marker); -%>
   </body>
 </html>
