--- a/static/views/partials/header.ejs
+++ b/static/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<div id="mySidenav" class="sidenav">
+<div id="sidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="dancemap.nav.closeNav()">&times;</a>
   <a class="side-nav__link" href="/add.html">Добавить школу танцев на карту</a>
 </div>
