--- a/static/views/partials/headertest.ejs
+++ b/static/views/partials/headertest.ejs
@@ -1,7 +1,4 @@
-<div id="mySidenav" class="sidenav">
-  <a href="javascript:void(0)" class="closebtn" onclick="dancemap.nav.closeNav()">&times;</a>
-  <a class="side-nav__link" href="/add.html">Добавить школу танцев на карту</a>
-</div>
+<%- include('./sidenav', marker); -%>
 <div class="container-header__nav"> 
   <header class="">
     <div class="nav">   
