mobile popup for width < 480

--- a/static/views/indextestmenu.ejs
+++ b/static/views/indextestmenu.ejs
@@ -19,6 +19,7 @@
     <link href='https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css' rel='stylesheet' />
     <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
     <!-- Dancemap-->
+    <script  src="/js/mobile.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <link href='/css/maintest.css' rel='stylesheet' />
   
@@ -62,6 +63,7 @@
     <script  src="/js/nav.js"></script>
     <script  src="/js/socket.js"></script>
     <script  src="/js/main.js"></script>
+
     <script>
       const settings = {
         event: true,
