--- a/static/views/partials/headertest.ejs
+++ b/static/views/partials/headertest.ejs
@@ -8,7 +8,7 @@
       <input type="search" placeholder="Название студии">
       <input type="button" value="" class="btn-clear" id="btn-clear"/>
     </div>
-    <a class="nav" id="container-logo" href="/" title="Танцевальная карта dancemap">
+    <a class="nav" id="container-logo" href="/testmenu" title="Танцевальная карта dancemap">
       <span>dance</span><span>map</span>
     </a>
   </header>
