--- a/static/views/index.ejs
+++ b/static/views/index.ejs
@@ -20,6 +20,7 @@
     <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
     <!-- Dancemap-->
     <script src="/socket.io/socket.io.js"></script>
+    <script  src="/js/mobile.js"></script>
     <link href='/css/main.css' rel='stylesheet' />
   
   
